--- a/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
+++ b/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
@@ -10,42 +10,46 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "62e05101",
    "metadata": {},
    "source": [
     "#### Life cycle of Machine learning Project\n",
     "\n",
-    "- Understanding the Problem Statement\n",
+    "- Life Cycle of Machine Learning Project\n",
+    "- Problem Statement Understanding\n",
     "- Data Collection\n",
-    "- Data Checks to perform\n",
-    "- Exploratory data analysis\n",
-    "- Data Pre-Processing\n",
+    "- Data Checks\n",
+    "- Exploratory Data Analysis\n",
+    "- Data Preprocessing\n",
     "- Model Training\n",
-    "- Choose best model"
+    "- Best Model Selection"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dfcea981",
    "metadata": {},
    "source": [
     "### 1) Problem statement\n",
-    "- This project understands how the student's performance (test scores) is affected by other variables such as Gender, Ethnicity, Parental level of education, Lunch and Test preparation course.\n",
+    "- The aim of this project is to examine the relationship between student performance (test scores) and other variables, such as gender, ethnicity, parental level of education, lunch, and test preparation course.\n",
     "\n",
     "\n",
     "### 2) Data Collection\n",
     "- Dataset Source - https://www.kaggle.com/datasets/spscientist/students-performance-in-exams?datasetId=74977\n",
-    "- The data consists of 8 column and 1000 rows."
+    "- The dataset includes 8 columns and 1000 rows."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "15b1355f",
    "metadata": {},
    "source": [
-    "### 2.1 Import Data and Required Packages\n",
-    "####  Importing Pandas, Numpy, Matplotlib, Seaborn and Warings Library."
+    "### 2.1 Importing Required Packages and Data\n",
+    "####  Importing Pandas, Numpy, Matplotlib, Seaborn, and Warnings Library."
    ]
   },
   {
@@ -65,11 +69,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3caeb0bb",
    "metadata": {},
    "source": [
-    "#### Import the CSV Data as Pandas DataFrame"
+    "#### Importing the CSV Data as Pandas DataFrame\n"
    ]
   },
   {
@@ -83,11 +88,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "92c8fd8a",
    "metadata": {},
    "source": [
-    "#### Show Top 5 Records"
+    "#### Showing Top 5 Records\n"
    ]
   },
   {
@@ -250,18 +256,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7e3cff9d",
    "metadata": {},
    "source": [
     "- gender : sex of students  -> (Male/female)\n",
     "- race/ethnicity : ethnicity of students -> (Group A, B,C, D,E)\n",
-    "- parental level of education : parents' final education ->(bachelor's degree,some college,master's degree,associate's degree,high school)\n",
-    "- lunch : having lunch before test (standard or free/reduced) \n",
-    "- test preparation course : complete or not complete before test\n",
-    "- math score\n",
-    "- reading score\n",
-    "- writing score"
+    "- Parental Level of Education: the highest education level achieved by the students' parents (Bachelor's Degree, Some College, Master's Degree, Associate's Degree, High School)\n",
+    "- Lunch: whether the student had lunch before the test (Standard or Free/Reduced) \n",
+    "- Test Preparation Course: whether the student completed the test preparation course before the test (Yes/No)\n",
+    "- Math Score: the score obtained by the student in the Math test\n",
+    "- Reading Score: the score obtained by the student in the Reading test\n",
+    "- Writing Score: the score obtained by the student in the Writing test"
    ]
   },
   {
@@ -271,7 +278,7 @@
    "metadata": {},
    "source": [
     "### 3. Data Checks to perform\n",
-    "\n",
+    "To ensure the quality of the dataset, the following checks should be performed:\n",
     "- Check Missing values\n",
     "- Check Duplicates\n",
     "- Check data type\n",
@@ -363,11 +370,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "30dfacc8",
    "metadata": {},
    "source": [
-    "### 3.3 Check data types"
+    "### 3.3 Checking data types"
    ]
   },
   {
@@ -441,11 +449,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a4f6b022",
    "metadata": {},
    "source": [
-    "### 3.5 Check statistics of data set"
+    "### 3.5 Checking statistics of data set"
    ]
   },
   {
@@ -555,14 +564,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9dc41207",
    "metadata": {},
    "source": [
     "#### Insight\n",
-    "- From above description of numerical data, all means are very close to each other - between 66 and 68.05;\n",
-    "- All standard deviations are also close - between 14.6 and 15.19;\n",
-    "- While there is a minimum score  0 for math, for writing minimum is much higher = 10 and for reading myet higher = 17"
+    "After analyzing the numerical data, several interesting observations can be made:\n",
+    "\n",
+    "- The means of all variables are relatively alike, with the values ranging from 66 to 68.05.\n",
+    "- Likewise, the standard deviations of all variables are relatively similar, with values ranging from 14.6 to 15.19.\n",
+    "- It is worth mentioning that the minimum score for math is 0, whereas for writing, the minimum score is significantly higher at 10, and for reading, it is even higher at 17."
    ]
   },
   {
@@ -1052,13 +1064,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "190e078c",
    "metadata": {},
    "source": [
     "#####  Insights\n",
-    " - From above values we get students have performed the worst in Maths \n",
-    " - Best performance is in reading section"
+    "Based on the above values, the following insights can be drawn:\n",
+    "\n",
+    "- Students have shown the weakest performance in the Math section.\n",
+    "- The best performance is observed in the reading section.\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1197,14 +1214,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9e7fd489",
    "metadata": {},
    "source": [
     "#####  Insights\n",
-    "- In general parent's education don't help student perform well in exam.\n",
-    "- 2nd plot shows that parent's whose education is of associate's degree or master's degree their male child tend to perform well in exam\n",
-    "- 3rd plot we can see there is no effect of parent's education on female students."
+    "The following insights can be derived from the analysis:\n",
+    "\n",
+    "- Generally, parent's education level does not seem to have a significant impact on a student's performance in the exam.\n",
+    "- However, the second plot indicates that male students with parents holding an associate's degree or a master's degree tend to perform better in the exam.\n",
+    "- On the other hand, the third plot reveals that there is no noticeable impact of parent's education on female students.\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1225,13 +1247,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6180a334",
    "metadata": {},
    "source": [
     "#####  Insights\n",
-    "- Students of group A and group B tends to perform poorly in exam.\n",
-    "- Students of group A and group B tends to perform poorly in exam irrespective of whether they are male or female"
+    "The analysis reveals the following insights:\n",
+    "\n",
+    "- Students from group A and group B appear to perform poorly in the exam.\n",
+    "- This trend is consistent across both male and female students."
    ]
   },
   {
@@ -1264,12 +1289,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "66d1041f",
    "metadata": {},
    "source": [
     "#### Insights\n",
-    "- From the above three plots its clearly visible that most of the students score in between 60-80 in Maths whereas in reading and writing most of them score from 50-80"
+    "Based on the analysis of the three plots, the following insights can be drawn:\n",
+    "\n",
+    "- Most of the students score between 60-80 in Math, as can be seen from the first plot.\n",
+    "- In contrast, the second and third plots reveal that the majority of students score between 50-80 in Reading and Writing."
    ]
   },
   {
@@ -1349,16 +1378,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2e2d686a",
    "metadata": {},
    "source": [
     "#####  Insights\n",
-    "- Number of Male and Female students is almost equal\n",
-    "- Number students are greatest in Group C\n",
-    "- Number of students who have standard lunch are greater\n",
-    "- Number of students who have not enrolled in any test preparation course is greater\n",
-    "- Number of students whose parental education is \"Some College\" is greater followed closely by \"Associate's Degree\""
+    "The following insights can be derived from the analysis:\n",
+    "\n",
+    "- The number of male and female students is almost equal in the dataset.\n",
+    "- Group C has the highest number of students among all the groups.\n",
+    "- Most of the students in the dataset have a standard lunch.\n",
+    "- The majority of the students have not enrolled in any test preparation course.\n",
+    "- The number of students whose parental education is \"Some College\" is the highest in the dataset, followed closely by those whose parental education is \"Associate's Degree\"."
    ]
   },
   {
@@ -1397,12 +1429,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cfb8c9b2",
    "metadata": {},
    "source": [
     "#### Insights \n",
-    "- Gender has balanced data with female students are 518 (48%) and male students are 482 (52%) "
+    "Upon analyzing the dataset, the following insight can be drawn:\n",
+    "\n",
+    "- The gender data is balanced, with 518 (48%) female students and 482 (52%) male students."
    ]
   },
   {
@@ -1481,10 +1516,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "acbc5c8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m f,ax\u001b[39m=\u001b[39mplt\u001b[39m.\u001b[39msubplots(\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,figsize\u001b[39m=\u001b[39m(\u001b[39m20\u001b[39m,\u001b[39m10\u001b[39m))\n\u001b[0;32m      2\u001b[0m sns\u001b[39m.\u001b[39mcountplot(x\u001b[39m=\u001b[39mdf[\u001b[39m'\u001b[39m\u001b[39mrace/ethnicity\u001b[39m\u001b[39m'\u001b[39m],data\u001b[39m=\u001b[39mdf,palette \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mbright\u001b[39m\u001b[39m'\u001b[39m,ax\u001b[39m=\u001b[39max[\u001b[39m0\u001b[39m],saturation\u001b[39m=\u001b[39m\u001b[39m0.95\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m container \u001b[39min\u001b[39;00m ax[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mcontainers:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "f,ax=plt.subplots(1,2,figsize=(20,10))\n",
     "sns.countplot(x=df['race/ethnicity'],data=df,palette = 'bright',ax=ax[0],saturation=0.95)\n",
@@ -1801,15 +1848,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b7e20716",
    "metadata": {},
    "source": [
     "### 5. Conclusions\n",
-    "- Student's Performance is related with lunch, race, parental level education\n",
-    "- Females lead in pass percentage and also are top-scorers\n",
-    "- Student's Performance is not much related with test preparation course\n",
-    "- Finishing preparation course is benefitial."
+    "Based on the analysis of the dataset, the following conclusions can be drawn:\n",
+    "\n",
+    "- A student's performance is significantly related to their lunch, race, and parental level of education.\n",
+    "- Female students have higher pass percentages and are generally top-scorers.\n",
+    "- The analysis suggests that there is not much correlation between a student's - performance and their enrollment in a test preparation course.\n",
+    "- However, it is beneficial for a student's performance to finish the test preparation course."
    ]
   }
  ],
